added status input

--- a/html/product-card.html
+++ b/html/product-card.html
@@ -233,12 +233,14 @@
             <h1>Lorem ipsum dolor sit amet</h1>
             <fieldset>
               <legend class="sign-in__label">Choose a flavor</legend>
+
               <div class="label-container">
                 <label class="sign-in__label">
                   <input type="checkbox" class="checkbox" name="variety" />
                   <span class="checkbox-icon"></span>
                   Lorem ipsum
                 </label>
+                <span class="availability">Yes</span>
               </div>
               <div class="label-container">
                 <label class="sign-in__label">
@@ -246,6 +248,7 @@
                   <span class="checkbox-icon"></span>
                   Dolor sit amet
                 </label>
+                <span class="availability">Yes</span>
               </div>
               <div class="label-container">
                 <label class="sign-in__label">
@@ -253,6 +256,7 @@
                   <span class="checkbox-icon"></span>
                   Consectetur adipiscing
                 </label>
+                <span class="availability">Yes</span>
               </div>
               <div class="label-container">
                 <label class="sign-in__label">
@@ -260,6 +264,7 @@
                   <span class="checkbox-icon"></span>
                   Proin vulputate
                 </label>
+                <span class="availability">Yes</span>
               </div>
               <div class="label-container">
                 <label class="sign-in__label">
@@ -267,6 +272,7 @@
                   <span class="checkbox-icon"></span>
                   Convallis turpis
                 </label>
+                <span class="availability">Yes</span>
               </div>
             </fieldset>
             <fieldset>
@@ -277,6 +283,7 @@
                   <span class="checkbox-icon"></span>
                   Proin vulputate
                 </label>
+                <span class="availability">No</span>
               </div>
               <div class="label-container">
                 <label class="sign-in__label">
@@ -284,6 +291,7 @@
                   <span class="checkbox-icon"></span>
                   Convallis turpis
                 </label>
+                <span class="availability">No</span>
               </div>
             </fieldset>
           </form>
