added new class "not" from availability and legend

--- a/html/product-card.html
+++ b/html/product-card.html
@@ -275,15 +275,15 @@
                 <span class="availability">Yes</span>
               </div>
             </fieldset>
-            <fieldset>
-              <legend class="sign-in__label">Not available</legend>
+            <fieldset class="second">
+              <legend class="sign-in__label not">Not available</legend>
               <div class="label-container">
                 <label class="sign-in__label">
                   <input type="checkbox" class="checkbox" name="variety" />
                   <span class="checkbox-icon"></span>
                   Proin vulputate
                 </label>
-                <span class="availability">No</span>
+                <span class="availability not">No</span>
               </div>
               <div class="label-container">
                 <label class="sign-in__label">
@@ -291,7 +291,7 @@
                   <span class="checkbox-icon"></span>
                   Convallis turpis
                 </label>
-                <span class="availability">No</span>
+                <span class="availability not">No</span>
               </div>
             </fieldset>
           </form>
