corect main-form__titile and corect main-legend__container

--- a/html/product-card.html
+++ b/html/product-card.html
@@ -230,9 +230,12 @@
         <div class="container">
           <form>
             <img class="card-img" src="../img/tube.png" alt="tube" />
-            <h1>Lorem ipsum dolor sit amet</h1>
+            <h2 class="main-form__title">Lorem ipsum dolor sit amet</h2>
             <fieldset>
-              <legend class="sign-in__label">Choose a flavor</legend>
+              <div class="main-legend__container">
+                <legend class="sign-in__legend">Choose a flavor</legend>
+                <span class="sign-in__legend">Availability</span>
+              </div>
 
               <div class="label-container">
                 <label class="sign-in__label">
