--- a/html/product-card.html
+++ b/html/product-card.html
@@ -300,6 +300,46 @@
           </form>
         </div>
       </section>
+
+      <section class="buttons-price">
+        <div class="container">
+          <div class="main-price__container">
+            <p class="buttons-price__text">Price for 1:</p>
+            <div class="price-container">
+              <span class="card-price">$50</span>
+              <span class="card-price sale">$70</span>
+            </div>
+          </div>
+
+          <div class="total-price__container">
+            <p>Total price:</p>
+            <span>$100</span>
+          </div>
+
+          <div class="main-button__container">
+            <div class="buttons-container__click">
+              <button>-</button>
+              <span>2</span>
+              <button>+</button>
+            </div>
+
+            <div class="button-container">
+              <button type="button" class="button-heart">
+                <svg class="heart" width="24" height="24">
+                  <use href="../img/sprite.svg#icon-Heart"></use>
+                </svg>
+              </button>
+              <button type="button" class="button-solid">
+                <svg class="icon-Solid" width="24" height="24">
+                  <use href="../img/sprite.svg#icon-Solid"></use>
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <button class="btn-card-add btn" type="button">Add to cart</button>
+      </section>
     </main>
     <!----------------- end/MAIN ---------------------->
 
