--- a/html/product-card.html
+++ b/html/product-card.html
@@ -312,8 +312,8 @@
           </div>
 
           <div class="total-price__container">
-            <p>Total price:</p>
-            <span>$100</span>
+            <p class="sign-in__subtitle">Total price:</p>
+            <span class="sign-in__subtitle">$100</span>
           </div>
 
           <div class="main-button__container">
