update sections html and css

--- a/html/product-card.html
+++ b/html/product-card.html
@@ -318,9 +318,9 @@
 
           <div class="main-button__container">
             <div class="buttons-container__click">
-              <button>-</button>
-              <span>2</span>
-              <button>+</button>
+              <button class="button minus">&#8722;</button>
+              <span class="button__number">2</span>
+              <button class="button plus">&#43;</button>
             </div>
 
             <div class="button-container">
@@ -336,9 +336,8 @@
               </button>
             </div>
           </div>
+          <button class="btn-card-add btn" type="button">Add to cart</button>
         </div>
-
-        <button class="btn-card-add btn" type="button">Add to cart</button>
       </section>
     </main>
     <!----------------- end/MAIN ---------------------->
