--- a/html/product-card.html
+++ b/html/product-card.html
@@ -337,6 +337,28 @@
             </div>
           </div>
           <button class="btn-card-add btn" type="button">Add to cart</button>
+          <div class="container-info">
+            <p class="container-info__text">
+              Country:<span class="container-info__subtext">USA</span>
+            </p>
+            <p class="container-info__text">
+              Brand:
+              <span class="container-info__subtext">Vital-J Empowering</span>
+            </p>
+            <p class="container-info__text">
+              Target: <span class="container-info__subtext">Lorem ipsum</span>
+            </p>
+            <p class="container-info__text">
+              Number of servings:<span class="container-info__subtext">32</span>
+            </p>
+            <p class="container-info__text">
+              Serving price:<span class="container-info__subtext">$2</span>
+            </p>
+            <p class="container-info__text">
+              Release form:
+              <span class="container-info__subtext">Capsules</span>
+            </p>
+          </div>
         </div>
       </section>
     </main>
