--- a/html/product-card.html
+++ b/html/product-card.html
@@ -359,6 +359,24 @@
               <span class="container-info__subtext">Capsules</span>
             </p>
           </div>
+
+          <div class="buttons-select">
+            <button>Description</button>
+            <button>Compound</button>
+            <button>USE</button>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+            vulputate convallis turpis, sit amet ultricies ex ullamcorper quis.
+            Ut quis pulvinar dolor. Donec semper eu nulla porta euismod. Ut
+            mattis enim dolor, vel tincidunt justo dapibus et. Proin ut nisl
+            vitae ex efficitur rutrum. Mauris lacinia fermentum est, nec tempor
+            justo pharetra eu. Cras gravida justo eu sapien laoreet, id
+            malesuada massa fringilla. Nam eget sapien ut nisl elementum
+            malesuada sit amet sed neque. Suspendisse molestie ultrices justo.
+            Suspendisse vitae nibh fermentum velit vestibulum fringilla.
+          </p>
+          <div class="compound-text"></div>
         </div>
       </section>
     </main>
