--- a/html/product-card.html
+++ b/html/product-card.html
@@ -377,6 +377,20 @@
             Suspendisse vitae nibh fermentum velit vestibulum fringilla.
           </p>
           <div class="compound-text"></div>
+          <hr />
+          <div class="descriptions-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+            vulputate convallis turpis, sit amet ultricies ex ullamcorper quis.
+            Ut quis pulvinar dolor. Donec semper eu nulla porta euismod. Ut
+            mattis enim dolor, vel tincidunt justo dapibus et. Proin ut nisl
+            vitae ex efficitur rutrum. Mauris lacinia fermentum est, nec tempor
+            justo pharetra eu. Cras gravida justo eu sapien laoreet, id
+            malesuada massa fringilla. Nam eget sapien ut nisl elementum
+            malesuada sit amet sed neque. Suspendisse molestie ultrices justo.
+            Suspendisse vitae nibh fermentum velit vestibulum fringilla. in ut
+            nisl vitae ex efficitur rutrum. Mauris lacinia fermentum est, nec
+            tempor justo pharetra eu.
+          </div>
         </div>
       </section>
     </main>
