--- a/html/product-card.html
+++ b/html/product-card.html
@@ -376,9 +376,9 @@
             malesuada sit amet sed neque. Suspendisse molestie ultrices justo.
             Suspendisse vitae nibh fermentum velit vestibulum fringilla.
           </p>
-          <div class="compound-text"></div>
+          <div class="compound-container"></div>
           <hr />
-          <div class="descriptions-text">
+          <p class="descriptions-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
             vulputate convallis turpis, sit amet ultricies ex ullamcorper quis.
             Ut quis pulvinar dolor. Donec semper eu nulla porta euismod. Ut
@@ -390,7 +390,7 @@
             Suspendisse vitae nibh fermentum velit vestibulum fringilla. in ut
             nisl vitae ex efficitur rutrum. Mauris lacinia fermentum est, nec
             tempor justo pharetra eu.
-          </div>
+          </p>
         </div>
       </section>
     </main>
