--- a/html/product-card.html
+++ b/html/product-card.html
@@ -365,7 +365,23 @@
             <button>Compound</button>
             <button>USE</button>
           </div>
-          <p>
+          <p class="descriptions-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+            vulputate convallis turpis, sit amet ultricies ex ullamcorper quis.
+            Ut quis pulvinar dolor. Donec semper eu nulla porta euismod. Ut
+            mattis enim dolor, vel tincidunt justo dapibus et. Proin ut nisl
+            vitae ex efficitur rutrum. Mauris lacinia fermentum est, nec tempor
+            justo pharetra eu.
+            <br />
+            Cras gravida justo eu sapien laoreet, id malesuada massa fringilla.
+            Nam eget sapien ut nisl elementum malesuada sit amet sed neque.
+            Suspendisse molestie ultrices justo. Suspendisse vitae nibh
+            fermentum velit vestibulum fringilla. in ut nisl vitae ex efficitur
+            rutrum. Mauris lacinia fermentum est, nec tempor justo pharetra eu.
+          </p>
+          <div class="compound-container"></div>
+          <hr />
+          <p class="use-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
             vulputate convallis turpis, sit amet ultricies ex ullamcorper quis.
             Ut quis pulvinar dolor. Donec semper eu nulla porta euismod. Ut
@@ -375,21 +391,6 @@
             malesuada massa fringilla. Nam eget sapien ut nisl elementum
             malesuada sit amet sed neque. Suspendisse molestie ultrices justo.
             Suspendisse vitae nibh fermentum velit vestibulum fringilla.
-          </p>
-          <div class="compound-container"></div>
-          <hr />
-          <p class="descriptions-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
-            vulputate convallis turpis, sit amet ultricies ex ullamcorper quis.
-            Ut quis pulvinar dolor. Donec semper eu nulla porta euismod. Ut
-            mattis enim dolor, vel tincidunt justo dapibus et. Proin ut nisl
-            vitae ex efficitur rutrum. Mauris lacinia fermentum est, nec tempor
-            justo pharetra eu. Cras gravida justo eu sapien laoreet, id
-            malesuada massa fringilla. Nam eget sapien ut nisl elementum
-            malesuada sit amet sed neque. Suspendisse molestie ultrices justo.
-            Suspendisse vitae nibh fermentum velit vestibulum fringilla. in ut
-            nisl vitae ex efficitur rutrum. Mauris lacinia fermentum est, nec
-            tempor justo pharetra eu.
           </p>
         </div>
       </section>
