--- a/html/product-card.html
+++ b/html/product-card.html
@@ -379,7 +379,55 @@
             fermentum velit vestibulum fringilla. in ut nisl vitae ex efficitur
             rutrum. Mauris lacinia fermentum est, nec tempor justo pharetra eu.
           </p>
-          <div class="compound-container"></div>
+          <div class="compound-container">
+            <table style="width: 100%">
+              <thead style="text-align: left">
+                <th>Average values</th>
+                <th>Per 50g</th>
+                <th>Per 100g</th>
+              </thead>
+              <tbody style="border-top: 1px solid black">
+                <tr>
+                  <td>Lorem ipsum</td>
+                  <td>24</td>
+                  <td>48</td>
+                </tr>
+                <tr>
+                  <td>Lorem ipsum</td>
+                  <td>24</td>
+                  <td>48</td>
+                </tr>
+                <tr>
+                  <td>Lorem ipsum</td>
+                  <td>24</td>
+                  <td>48</td>
+                </tr>
+              </tbody>
+
+              <tfoot>
+                <tr>
+                  <td>Lorem ipsum</td>
+                  <td>24</td>
+                  <td>48</td>
+                </tr>
+                <tr>
+                  <td>Lorem ipsum</td>
+                  <td>24</td>
+                  <td>48</td>
+                </tr>
+                <tr>
+                  <td>Lorem ipsum</td>
+                  <td>24</td>
+                  <td>48</td>
+                </tr>
+                <tr>
+                  <td>Lorem ipsum</td>
+                  <td>24</td>
+                  <td>48</td>
+                </tr>
+              </tfoot>
+            </table>
+          </div>
           <hr />
           <p class="use-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
