--- a/html/product-card.html
+++ b/html/product-card.html
@@ -380,13 +380,14 @@
             rutrum. Mauris lacinia fermentum est, nec tempor justo pharetra eu.
           </p>
           <div class="compound-container">
-            <table style="width: 100%">
+            <table>
               <thead style="text-align: left">
                 <th>Average values</th>
                 <th>Per 50g</th>
                 <th>Per 100g</th>
               </thead>
-              <tbody style="border-top: 1px solid black">
+
+              <tbody>
                 <tr>
                   <td>Lorem ipsum</td>
                   <td>24</td>
