corect style buttons

--- a/html/product-card.html
+++ b/html/product-card.html
@@ -361,9 +361,11 @@
           </div>
 
           <div class="buttons-select">
-            <button>Description</button>
-            <button>Compound</button>
-            <button>USE</button>
+            <button class="buttons-select__tab" type="radio">
+              Description
+            </button>
+            <button class="buttons-select__tab" type="radio">Compound</button>
+            <button class="buttons-select__tab" type="radio">USE</button>
           </div>
           <p class="descriptions-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
