corect text-buttons

--- a/html/product-card.html
+++ b/html/product-card.html
@@ -365,7 +365,7 @@
               Description
             </button>
             <button class="buttons-select__tab" type="radio">Compound</button>
-            <button class="buttons-select__tab" type="radio">USE</button>
+            <button class="buttons-select__tab" type="radio">Use</button>
           </div>
           <p class="descriptions-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
