corect text-align and replace with html into css

--- a/html/product-card.html
+++ b/html/product-card.html
@@ -383,7 +383,7 @@
           </p>
           <div class="compound-container">
             <table>
-              <thead style="text-align: left">
+              <thead>
                 <th>Average values</th>
                 <th>Per 50g</th>
                 <th>Per 100g</th>
