--- a/html/product-card.html
+++ b/html/product-card.html
@@ -360,29 +360,7 @@
             </p>
           </div>
 
-          <div class="buttons-select">
-            <button
-              class="buttons-select__tab"
-              type="radio"
-              data-action="active"
-            >
-              Description
-            </button>
-            <button
-              class="buttons-select__tab"
-              type="radio"
-              data-action="noActive"
-            >
-              Compound
-            </button>
-            <button
-              class="buttons-select__tab"
-              type="radio"
-              data-action="visually"
-            >
-              Use
-            </button>
-          </div>
+          <div class="buttons-select"></div>
           <p class="descriptions-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
             vulputate convallis turpis, sit amet ultricies ex ullamcorper quis.
