--- a/html/product-card.html
+++ b/html/product-card.html
@@ -360,7 +360,7 @@
             </p>
           </div>
 
-          <div class="buttons-select"></div>
+          <div class="buttons-select js-buttons"></div>
           <p class="descriptions-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
             vulputate convallis turpis, sit amet ultricies ex ullamcorper quis.
