correct space with "textarea"

--- a/html/contact.html
+++ b/html/contact.html
@@ -273,8 +273,7 @@
                 rows="5"
                 cols="33"
                 placeholder="Write your message"
-              >
-              </textarea>
+              ></textarea>
             </fieldset>
           </form>
           <div class="label-container">
