--- a/home.html
+++ b/home.html
@@ -183,7 +183,7 @@
               <li><a href="#">About us</a></li>
               <li><a href="./shop.html">Shop</a></li>
               <li><a href="./contact.html">Contact us</a></li>
-              <li><a href="">FAQ</a></li>
+              <li><a href="./html/privacy-policy.html">FAQ</a></li>
             </ul>
           </div>
         </div>
