--- a/home.html
+++ b/home.html
@@ -68,7 +68,10 @@
               <a href="#" class="navigation-main-list__item-link">About us</a>
             </li>
             <li class="navigation-main-list__item">
-              <a href="./shop.html" class="navigation-main-list__item-link">
+              <a
+                href="./html/shop.html"
+                class="navigation-main-list__item-link"
+              >
                 Shop
               </a>
               <button class="btnArrow">
@@ -81,7 +84,7 @@
                   <li class="click-category__item">
                     <a
                       class="click-category__link"
-                      href="./shop-category.html"
+                      href="./html/shop-category.html"
                       rel="noopener noreferrer"
                       >Category 1</a
                     >
@@ -89,7 +92,7 @@
                   <li class="click-category__item">
                     <a
                       class="click-category__link"
-                      href="./shop-category.html"
+                      href="./html/shop-category.html"
                       rel="noopener noreferrer"
                       >Category 2</a
                     >
@@ -97,7 +100,7 @@
                   <li class="click-category__item">
                     <a
                       class="click-category__link"
-                      href="./shop-category.html"
+                      href="./html/shop-category.html"
                       rel="noopener noreferrer"
                       >Category 3</a
                     >
@@ -105,7 +108,7 @@
                   <li class="click-category__item">
                     <a
                       class="click-category__link"
-                      href="./shop-category.html"
+                      href="./html/shop-category.html"
                       rel="noopener noreferrer"
                       >Category 4</a
                     >
@@ -113,7 +116,7 @@
                   <li class="click-category__item">
                     <a
                       class="click-category__link"
-                      href="./shop-category.html"
+                      href="./html/shop-category.html"
                       rel="noopener noreferrer"
                       >Category 5</a
                     >
@@ -122,12 +125,18 @@
               </article>
             </li>
             <li class="navigation-main-list__item">
-              <a href="./contact.html" class="navigation-main-list__item-link"
+              <a
+                href="./html/contact.html"
+                class="navigation-main-list__item-link"
                 >Contact us</a
               >
             </li>
             <li class="navigation-main-list__item">
-              <a href="#" class="navigation-main-list__item-link">FAQ</a>
+              <a
+                href="./html/privacy-policy.html"
+                class="navigation-main-list__item-link"
+                >FAQ</a
+              >
             </li>
           </ul>
         </nav>
@@ -181,8 +190,8 @@
             <ul>
               <li><a href="./home.html">Home</a></li>
               <li><a href="#">About us</a></li>
-              <li><a href="./shop.html">Shop</a></li>
-              <li><a href="./contact.html">Contact us</a></li>
+              <li><a href="./html/shop.html">Shop</a></li>
+              <li><a href="./html/contact.html">Contact us</a></li>
               <li><a href="./html/privacy-policy.html">FAQ</a></li>
             </ul>
           </div>
