added all links from all pages

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   <body>
     <ol>
       <li>
-        <a href="./html/home.html" target="_blank" rel="noopener noreferrer"
-          >Home</a
-        >
+        <a href="./html/home.html">Home</a>
       </li>
-      <li><a href="http://" target="_blank" rel="noopener noreferrer"></a></li>
-      <li><a href="http://" target="_blank" rel="noopener noreferrer"></a></li>
-      <li><a href="http://" target="_blank" rel="noopener noreferrer"></a></li>
-      <li><a href="http://" target="_blank" rel="noopener noreferrer"></a></li>
-      <li><a href="http://" target="_blank" rel="noopener noreferrer"></a></li>
-      <li><a href="http://" target="_blank" rel="noopener noreferrer"></a></li>
-      <li><a href="http://" target="_blank" rel="noopener noreferrer"></a></li>
+      <li>
+        <a href="./html/shop.html">Shop</a>
+      </li>
+      <li><a href="./html/shop-category.html">Shop-category</a></li>
+      <li><a href="./html/privacy-policy.html">Privacy-policy</a></li>
+      <li><a href="./html/shop-category.html">Shop-category</a></li>
+      <li><a href="./html/product-card.html">Product-card</a></li>
+      <li><a href="./html/sign-in.html">Sign-in</a></li>
+      <li><a href="./html/my-account.html">My-account</a></li>
     </ol>
   </body>
 </html>
