corect all links from index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <nav>
           <ul class="navigation-main-list">
             <li class="navigation-main-list__item">
-              <a href="./home.html" class="navigation-main-list__item-link"
+              <a href="./index.html" class="navigation-main-list__item-link"
                 >Home</a
               >
             </li>
@@ -188,7 +188,7 @@
               </svg>
             </a>
             <ul>
-              <li><a href="./home.html">Home</a></li>
+              <li><a href="./index.html">Home</a></li>
               <li><a href="#">About us</a></li>
               <li><a href="./html/shop.html">Shop</a></li>
               <li><a href="./html/contact.html">Contact us</a></li>
@@ -555,7 +555,7 @@
         <div class="footer-wrapper">
           <ul class="list footer-list">
             <li class="list-item">
-              <a class="footer-link" href="./home.html">Home</a>
+              <a class="footer-link" href="./index.html">Home</a>
             </li>
             <li class="list-item">
               <a class="footer-link" href="#">About us</a>
@@ -565,7 +565,7 @@
             </li>
             <li class="list-item"><a class="footer-link" href="#">FAQ</a></li>
             <li class="list-item">
-              <a class="footer-link" href="./privacy-policy.html"
+              <a class="footer-link" href="./html/privacy-policy.html"
                 >Privacy policy</a
               >
             </li>
