--- a/html/shop.html
+++ b/html/shop.html
@@ -39,7 +39,7 @@
       </div>
 
       <div class="container container-flex">
-        <a class="navigation-logo" href="./home.html">
+        <a class="navigation-logo" href="../index.html">
           <svg class="logo" width="55" height="33">
             <use href="../img/sprite.svg#icon-logo"></use>
           </svg>
@@ -61,7 +61,7 @@
         <nav>
           <ul class="navigation-main-list">
             <li class="navigation-main-list__item">
-              <a href="./home.html" class="navigation-main-list__item-link"
+              <a href="../index.html" class="navigation-main-list__item-link"
                 >Home</a
               >
             </li>
@@ -128,7 +128,11 @@
               >
             </li>
             <li class="navigation-main-list__item">
-              <a href="#" class="navigation-main-list__item-link">FAQ</a>
+              <a
+                href="./privacy-policy.html"
+                class="navigation-main-list__item-link"
+                >FAQ</a
+              >
             </li>
           </ul>
         </nav>
@@ -180,11 +184,11 @@
               </svg>
             </a>
             <ul>
-              <li><a href="./home.html">Home</a></li>
+              <li><a href="../index.html">Home</a></li>
               <li><a href="#">About us</a></li>
               <li><a href="./shop.html">Shop</a></li>
               <li><a href="./contact.html">Contact us</a></li>
-              <li><a href="">FAQ</a></li>
+              <li><a href="./privacy-policy.html">FAQ</a></li>
             </ul>
           </div>
         </div>
