corect link in footer from shop-page

--- a/html/shop.html
+++ b/html/shop.html
@@ -265,7 +265,7 @@
     <!----------------- FOOTER ------------------------>
     <footer class="footer">
       <div class="container container-footer">
-        <a class="footer-logo-link" href="./home.html">
+        <a class="footer-logo-link" href="../index.html">
           <svg class="logo footer">
             <use href="../img/sprite.svg#icon-footer-logo"></use>
           </svg>
@@ -274,7 +274,7 @@
         <div class="footer-wrapper">
           <ul class="list footer-list">
             <li class="list-item">
-              <a class="footer-link" href="./home.html">Home</a>
+              <a class="footer-link" href="../index.html">Home</a>
             </li>
             <li class="list-item">
               <a class="footer-link" href="#">About us</a>
