--- a/html/product-card.html
+++ b/html/product-card.html
@@ -216,7 +216,9 @@
     <main>
       <div class="container">
         <div class="bradcrumbs">
-          <a href="./home.html" class="bradcrumbs__link">Vital-J Empowering</a>
+          <a href="../index.html" class="bradcrumbs__link"
+            >Vital-J Empowering</a
+          >
           <span>&#10095;</span>
           <a href="./shop.html" class="bradcrumbs__link">Shop</a>
           <span>&#10095;</span>
