--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
               >
             </li>
             <li class="navigation-main-list__item">
-              <a href="#" class="navigation-main-list__item-link">About us</a>
+              <a
+                href="./html/about-us.html"
+                class="navigation-main-list__item-link"
+                >About us</a
+              >
             </li>
             <li class="navigation-main-list__item">
               <a
