corect links from about-us pages

--- a/html/about-us.html
+++ b/html/about-us.html
@@ -60,18 +60,17 @@
         <nav>
           <ul class="navigation-main-list">
             <li class="navigation-main-list__item">
-              <a href="./index.html" class="navigation-main-list__item-link"
+              <a href="../index.html" class="navigation-main-list__item-link"
                 >Home</a
               >
             </li>
             <li class="navigation-main-list__item">
-              <a href="#" class="navigation-main-list__item-link">About us</a>
+              <a href="./about-us.html" class="navigation-main-list__item-link"
+                >About us</a
+              >
             </li>
             <li class="navigation-main-list__item">
-              <a
-                href="./html/shop.html"
-                class="navigation-main-list__item-link"
-              >
+              <a href="./shop.html" class="navigation-main-list__item-link">
                 Shop
               </a>
               <button class="btnArrow">
@@ -125,18 +124,12 @@
               </article>
             </li>
             <li class="navigation-main-list__item">
-              <a
-                href="./html/contact.html"
-                class="navigation-main-list__item-link"
+              <a href="./contact.html" class="navigation-main-list__item-link"
                 >Contact us</a
               >
             </li>
             <li class="navigation-main-list__item">
-              <a
-                href="./html/privacy-policy.html"
-                class="navigation-main-list__item-link"
-                >FAQ</a
-              >
+              <a href="#" class="navigation-main-list__item-link">FAQ</a>
             </li>
           </ul>
         </nav>
@@ -188,11 +181,11 @@
               </svg>
             </a>
             <ul>
-              <li><a href="./index.html">Home</a></li>
-              <li><a href="#">About us</a></li>
-              <li><a href="./html/shop.html">Shop</a></li>
-              <li><a href="./html/contact.html">Contact us</a></li>
-              <li><a href="./html/privacy-policy.html">FAQ</a></li>
+              <li><a href="../index.html">Home</a></li>
+              <li><a href="./about-us.html">About us</a></li>
+              <li><a href="./shop.html">Shop</a></li>
+              <li><a href="./contact.html">Contact us</a></li>
+              <li><a href="#">FAQ</a></li>
             </ul>
           </div>
         </div>
@@ -225,9 +218,11 @@
     <main>
       <div class="container">
         <div class="bradcrumbs">
-          <a href="./home.html" class="bradcrumbs__link">Vital-J Empowering</a>
+          <a href="../index.html" class="bradcrumbs__link"
+            >Vital-J Empowering</a
+          >
           <span>&#10095;</span>
-          <a href="./contact.html" class="bradcrumbs__link">About us</a>
+          <a href="./about-us.html" class="bradcrumbs__link">About us</a>
         </div>
       </div>
     </main>
@@ -245,7 +240,7 @@
         <div class="footer-wrapper">
           <ul class="list footer-list">
             <li class="list-item">
-              <a class="footer-link" href="./index.html">Home</a>
+              <a class="footer-link" href="../index.html">Home</a>
             </li>
             <li class="list-item">
               <a class="footer-link" href="./about-us.html">About us</a>
@@ -255,7 +250,7 @@
             </li>
             <li class="list-item"><a class="footer-link" href="#">FAQ</a></li>
             <li class="list-item">
-              <a class="footer-link" href="./html/privacy-policy.html"
+              <a class="footer-link" href="./privacy-policy.html"
                 >Privacy policy</a
               >
             </li>
