--- a/html/shop-category.html
+++ b/html/shop-category.html
@@ -60,20 +60,20 @@
         <nav>
           <ul class="navigation-main-list">
             <li class="navigation-main-list__item">
-              <a href="#" class="navigation-main-list__item-link">Home</a>
+              <a href="../index.html" class="navigation-main-list__item-link">Home</a>
             </li>
             <li class="navigation-main-list__item">
-              <a href="#" class="navigation-main-list__item-link">About us</a>
+              <a href="./about-us.html" class="navigation-main-list__item-link">About us</a>
             </li>
             <li class="navigation-main-list__item">
-              <a href="#" class="navigation-main-list__item-link">
+              <a href="./shop.html" class="navigation-main-list__item-link">
                 <details>
                   <summary>Shop</summary>
                 </details>
               </a>
             </li>
             <li class="navigation-main-list__item">
-              <a href="#" class="navigation-main-list__item-link">Contact us</a>
+              <a href="./contact.html" class="navigation-main-list__item-link">Contact us</a>
             </li>
             <li class="navigation-main-list__item">
               <a href="#" class="navigation-main-list__item-link">FAQ</a>
