--- a/html/product-card.html
+++ b/html/product-card.html
@@ -362,83 +362,17 @@
             </p>
           </div>
 
-          <div class="buttons-select"></div>
-          <p class="descriptions-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
-            vulputate convallis turpis, sit amet ultricies ex ullamcorper quis.
-            Ut quis pulvinar dolor. Donec semper eu nulla porta euismod. Ut
-            mattis enim dolor, vel tincidunt justo dapibus et. Proin ut nisl
-            vitae ex efficitur rutrum. Mauris lacinia fermentum est, nec tempor
-            justo pharetra eu.
-            <br />
-            Cras gravida justo eu sapien laoreet, id malesuada massa fringilla.
-            Nam eget sapien ut nisl elementum malesuada sit amet sed neque.
-            Suspendisse molestie ultrices justo. Suspendisse vitae nibh
-            fermentum velit vestibulum fringilla. in ut nisl vitae ex efficitur
-            rutrum. Mauris lacinia fermentum est, nec tempor justo pharetra eu.
-          </p>
-          <div class="compound-container">
-            <table>
-              <thead>
-                <th>Average values</th>
-                <th>Per 50g</th>
-                <th>Per 100g</th>
-              </thead>
-
-              <tbody>
-                <tr>
-                  <td>Lorem ipsum</td>
-                  <td>24</td>
-                  <td>48</td>
-                </tr>
-                <tr>
-                  <td>Lorem ipsum</td>
-                  <td>24</td>
-                  <td>48</td>
-                </tr>
-                <tr>
-                  <td>Lorem ipsum</td>
-                  <td>24</td>
-                  <td>48</td>
-                </tr>
-              </tbody>
-
-              <tfoot>
-                <tr>
-                  <td>Lorem ipsum</td>
-                  <td>24</td>
-                  <td>48</td>
-                </tr>
-                <tr>
-                  <td>Lorem ipsum</td>
-                  <td>24</td>
-                  <td>48</td>
-                </tr>
-                <tr>
-                  <td>Lorem ipsum</td>
-                  <td>24</td>
-                  <td>48</td>
-                </tr>
-                <tr>
-                  <td>Lorem ipsum</td>
-                  <td>24</td>
-                  <td>48</td>
-                </tr>
-              </tfoot>
-            </table>
-          </div>
-
-          <p class="use-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
-            vulputate convallis turpis, sit amet ultricies ex ullamcorper quis.
-            Ut quis pulvinar dolor. Donec semper eu nulla porta euismod. Ut
-            mattis enim dolor, vel tincidunt justo dapibus et. Proin ut nisl
-            vitae ex efficitur rutrum. Mauris lacinia fermentum est, nec tempor
-            justo pharetra eu. Cras gravida justo eu sapien laoreet, id
-            malesuada massa fringilla. Nam eget sapien ut nisl elementum
-            malesuada sit amet sed neque. Suspendisse molestie ultrices justo.
-            Suspendisse vitae nibh fermentum velit vestibulum fringilla.
-          </p>
+          <ul class="buttons-select">
+            <li class="button-select__tab">
+              <a class="descriptions-text" href="">Description</a>
+            </li>
+            <li class="button-select__tab">
+              <a class="compound-container" href="">Compound</a>
+            </li>
+            <li class="button-select__tab">
+              <a class="use-text" href="">Use</a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
